--- a/css/styles.css
+++ b/css/styles.css
@@ -61,12 +61,11 @@ img {
 }
 
 .visually-hidden {  
-   border: 0;   
-   white-space: nowrap;
-   clip-path: inset(100%);
-   clip: rect(0 0 0 0);
-   overflow: hidden;
-
+border: 0;   
+white-space: nowrap;
+clip-path: inset(100%);
+clip: rect(0 0 0 0);
+overflow: hidden;
 position: absolute;
 width: 1px;
 height: 1px;
@@ -80,11 +79,9 @@ overflow: hidden;
 }
 
  /* ----------------------Header Studio & Portfolio-------------------------- */
+
 .header {
-padding-top: 24px;
-padding-bottom: 24px;
 border-bottom: 1px solid #e7e9fc;
-padding: 24px 0;
 }
 
 .header-container {
@@ -96,7 +93,6 @@ padding: 24px 0;
    display: flex;  
    align-items: center; 
    margin-right: auto;
-   gap: 100px;
 }
 
 .header-logo {
@@ -157,7 +153,6 @@ padding: 24px 0;
 }
 
 .header-address-item {
-
 }
 
 
@@ -166,8 +161,7 @@ padding: 24px 0;
    font-style: normal;
    font-size: 16px;
    line-height: 1.5; 
-   letter-spacing: 0.02em;
-   
+   letter-spacing: 0.02em;   
 }
 
 /* ---------------------------Hero Studio-----------------------*/
@@ -234,13 +228,11 @@ padding: 24px 0;
 
 .advantages-list {
    display: flex;
-   gap: 24px;
-   
+   gap: 24px;   
 }
 
 .advantages-list-item {
    width: calc((100%-3*24px)/4);
-   /* gap: 8px; */
 } 
 
 .advantages-subtitle {
@@ -254,7 +246,6 @@ padding: 24px 0;
    height: 24px;
    margin-bottom: 8px;
 }
-
 
 .advantages-text {
    color: var(--slate);
@@ -282,7 +273,6 @@ padding: 24px 0;
    margin-bottom: 72px;
 }
 
-
 .made-list {
  display: flex;
  gap: 24px;
@@ -293,8 +283,6 @@ padding: 24px 0;
    flex-direction: column;
    align-items: flex-start;
    width: calc((100%-2*24px)/3);
-   /* margin-top: 72px; */
-   margin-bottom: 120px;
 }
 
 /* -------------------------------Team Studio------------------ */
@@ -311,18 +299,13 @@ padding: 24px 0;
    line-height: 1.11; 
    letter-spacing: 0.02em;
    text-transform: capitalize;
-   padding-top: 120px;
-   margin: 0 auto;
-   margin-top: 120px;
    margin-bottom: 72px;
-
 }
 
 .team-list {
    display: flex;
    flex-wrap: wrap;
    gap: 24px;
-   padding-bottom: 120px;
 }
 
 .team-list-item {
@@ -332,9 +315,7 @@ padding: 24px 0;
 }
 
 .team-list-text {
-   margin-top: 32px;
-   margin-bottom: 32px;
-   padding: 32px 0;
+padding: 32px 0;
 }
 
 .team-list-name {
@@ -364,7 +345,6 @@ padding: 24px 0;
    font-weight: 800;
    line-height: 1.17; 
    letter-spacing: 0.03em;
-   text-transform: uppercase; 
    background-color: var(--navyblue); 
    padding: 100px 0;  
 } 
@@ -380,8 +360,7 @@ padding: 24px 0;
    background-color: var(--navyblue); 
    display: inline-block; 
    margin-bottom: 16px; 
-} 
-   
+}    
 
 .footer-logo-f {
    color: var(--cloud);
@@ -389,16 +368,18 @@ padding: 24px 0;
 } 
 
 .footer-text {
+   width: 264px;
    color: var(--cloud);
    font-size: 16px;
    line-height: 1.5; 
    letter-spacing: 0.02em;
-   /* margin-top: 18px; */
+   font-family: Roboto;  
+   font-style: normal;
+   font-weight: normal;
 }
 
 /* ---------------------------Main Portfolio--------------------------- */
 .main {
-
 }
 
 .main-button-card {
@@ -406,14 +387,12 @@ padding: 24px 0;
    padding-bottom: 120px;
 }
 
-
 .list-button {
    display: flex;
    justify-content: center;
    gap: 24px;
    margin-bottom: 72px
 }
-
 
 .filter-button {
    color: var(--iris);
@@ -444,7 +423,6 @@ padding: 24px 0;
    border: 1px solid transparent;
 }
 
-
 .card-list {
 display: flex;
 flex-wrap: wrap;
@@ -453,20 +431,13 @@ row-gap: 48px;
 }
 
 .card-list-item {
-width: 360px;
-height: 420px;
-padding-bottom: 0px;
-flex-direction: column;
-align-items: flex-start;
-flex-shrink: 0;
-border: 1px solid var(--cornflower, #E7E9FC);
-background: var(--white, #FFF);
-width: calc((100% - 48px) / 3); 
+width: calc((100% - 48px) / 3);
 }
 
 .container-link {
    padding: 32px 16px;
-   border: 1px solid #e7e9fc;
+   border: 1px solid #e7e9fc; 
+   border-top: none; 
 }
 
 .portfolio-link {
