--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,7 @@ overflow: hidden;
 
 .header {
 border-bottom: 1px solid #e7e9fc;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
 }
 
 .header-container {
@@ -125,6 +126,16 @@ border-bottom: 1px solid #e7e9fc;
    padding: 24px 0;
 }
 
+.header-menu-item::after {
+   position: absolute;
+   left:0;
+   bottom: -1px;
+   height: 4px;
+   background-color: #404bbf;
+   border-radius: 2px; 
+
+}
+
 .header-menu-link {
    color: var(--navyblue);
    font-size: 16px;
@@ -132,6 +143,9 @@ border-bottom: 1px solid #e7e9fc;
    line-height: 1.5;
    letter-spacing: 0.02em;
    padding: 24px 0;
+   position: relative; 
+   color: #404bbf;
+   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover {
@@ -162,6 +176,7 @@ border-bottom: 1px solid #e7e9fc;
    font-size: 16px;
    line-height: 1.5; 
    letter-spacing: 0.02em;   
+   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ---------------------------Hero Studio-----------------------*/
