--- a/css/styles.css
+++ b/css/styles.css
@@ -184,9 +184,12 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .hero {
    background-color: var(--navyblue);
    padding: 188px 0;
+   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg); або background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpg);
+   max-width: 1440px;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
 }
-
-
 
 .hero-title {
    color: var(--white);
@@ -221,6 +224,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    border: none;
    height: 56px;
    margin-top: 48px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover {
@@ -238,9 +242,6 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    padding-bottom: 120px;
 }
 
-.visually-hidden {
-}
-
 .advantages-list {
    display: flex;
    gap: 24px;   
@@ -249,6 +250,16 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .advantages-list-item {
    width: calc((100%-3*24px)/4);
 } 
+
+.container-icons-1 {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   height: 112px; 
+   background-color: #f4f4fd;
+   border-radius: 4px;
+   margin-bottom: 8px;
+}
 
 .advantages-subtitle {
    color: var(--navyblue);
