--- a/css/styles.css
+++ b/css/styles.css
@@ -227,11 +227,11 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn:hover {
+.hero-button:hover {
    background-color: var(--ocean);
 }
 
-.hero-btn:focus {
+.hero-button:focus {
    background-color: var(--ocean);
 }
 
@@ -338,6 +338,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    background-color: var(--white);
    border-radius: 0px 0px 4px 4px; 
    width: ((100% - 72px) / 4);
+   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-list-text {
@@ -362,6 +363,90 @@ padding: 32px 0;
    letter-spacing: 0.02em;
 }
 
+.team-socials-list {
+   display: flex;
+   justify-content: center;
+   gap: 24px;
+
+}
+
+.team-socials-item {
+   width: 40px;
+   height: 40px;
+
+}
+
+.team-socials-link {
+   width: 100%;
+   height: 100%;
+   background-color: #4D5AE5;
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   }
+
+   .team-socials-link:hover {
+      background-color: #404bbf; 
+   }
+
+.team-socials-link:focus {
+   background-color: #404bbf; 
+}
+
+.team-icons {
+   fill: #f4f4fd;
+}
+
+.customers {
+   padding-top: 120px;
+   padding-bottom: 120px;
+}
+
+.customers-title {
+   font-size: 36px;
+   line-height: 1.11;
+   color: #2e2f42; 
+   margin-bottom: 72px;   
+}
+
+.customers-list {
+   display: flex; 
+   gap: 24px;  
+}
+
+.customers-list-item {
+   width: calc((100% - 120px) / 6); 
+   height: 88px;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-list-link {
+   width: 100%;
+   height: 100%;
+   border: 1px solid #8e8f99;
+   border-radius: 4px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color:  #8e8f99;
+}
+
+.customers-list-link:hover {
+   border-color: #404bbf;
+   color: #404bbf; 
+}
+
+.customers-list-link:focus {
+   border-color: #404bbf;
+   color: #404bbf; 
+}   
+
+.customers-icons {
+   fill: currentColor;
+}
+
+
 /* -------------------------Footer Studio & Portfolio--------------------------------- */
 
 
@@ -374,6 +459,15 @@ padding: 32px 0;
    background-color: var(--navyblue); 
    padding: 100px 0;  
 } 
+
+.footer-container {
+   display: flex;
+   align-items: baseline;
+}
+
+.footer-container-logo-text {
+   margin-right: 120px; 
+}
 
 .footer-logo {
    color: var(--iris);
@@ -403,6 +497,53 @@ padding: 32px 0;
    font-style: normal;
    font-weight: normal;
 }
+
+.footer-container-socials {
+
+}
+
+.footer-socials {
+   font-weight: 500;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color:  #FFFFFF;
+   margin-bottom: 16px; 
+}
+
+.footer-socials-list {
+   display: flex;
+   gap: 16px;
+}
+
+.footer-socials-item {
+   width: 40px;
+   height: 40px;
+
+}
+
+.footer-list-link {
+   width: 100%;
+   height: 100%;
+   background-color: #4d5ae5;
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.footer-list-link:hover {
+background-color: #31d0aa;
+}
+
+.footer-list-link:focus {
+background-color: #31d0aa;;
+}
+
+.footer-icons {
+   fill: #f4f4fd;
+}
+
 
 /* ---------------------------Main Portfolio--------------------------- */
 .main {
