--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,8 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .header-menu-item {
    padding: 24px 0;
+   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .header-menu-item::after {
@@ -133,7 +135,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    height: 4px;
    background-color: #404bbf;
    border-radius: 2px; 
-
+   content: ;
 }
 
 .header-menu-link {
@@ -167,6 +169,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 
 .header-address-item {
+   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -178,6 +181,8 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    letter-spacing: 0.02em;   
    transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* --------------------------main-------------------------- */
 
 /* ---------------------------Hero Studio-----------------------*/
 
@@ -251,7 +256,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    width: calc((100%-3*24px)/4);
 } 
 
-.container-icons-1 {
+.advantages-container-icons {
    display: flex;
    align-items: center;
    justify-content: center;
@@ -373,7 +378,6 @@ padding: 32px 0;
 .team-socials-item {
    width: 40px;
    height: 40px;
-
 }
 
 .team-socials-link {
@@ -384,6 +388,7 @@ padding: 32px 0;
    display: flex;
    align-items: center;
    justify-content: center;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 
    .team-socials-link:hover {
@@ -418,7 +423,6 @@ padding: 32px 0;
 .customers-list-item {
    width: calc((100% - 120px) / 6); 
    height: 88px;
-   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-list-link {
@@ -430,6 +434,8 @@ padding: 32px 0;
    align-items: center;
    justify-content: center;
    color:  #8e8f99;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .customers-list-link:hover {
@@ -530,6 +536,7 @@ padding: 32px 0;
    display: flex;
    align-items: center;
    justify-content: center;
+   transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-list-link:hover {
@@ -561,6 +568,10 @@ background-color: #31d0aa;;
    margin-bottom: 72px
 }
 
+.list-button-item {
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .filter-button {
    color: var(--iris);
    background-color: var(--cloud);
@@ -582,12 +593,14 @@ background-color: #31d0aa;;
    color: var(--white);
    background-color: var(--ocean);
    border: 1px solid transparent;
+   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-button:focus {
    color: var(--white);
    background-color: var(--ocean);
    border: 1px solid transparent;
+   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .card-list {
@@ -601,14 +614,51 @@ row-gap: 48px;
 width: calc((100% - 48px) / 3);
 }
 
+.portfolio-link {
+   display: block;
+   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover {
+   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+   transform: translateY(0%);
+}
+
+.portfolio-link:focus {
+   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);  
+   transform: translateY(0%);
+}
+
+.card-images {
+   position: relative;
+   overflow: hidden; 
+}
+
+.card-text {
+   position: absolute;
+   top: 0;
+   font-size: 16px;
+   line-height: 1.5; 
+   letter-spacing: 0.02em;
+   color: #f4f4fd;
+   padding: 40px 32px;
+   background-color: #4d5ae5;
+   height: 100%;
+   width: 100%;
+   transform: translateY(100%);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+}
+
+
 .container-link {
    padding: 32px 16px;
    border: 1px solid #e7e9fc; 
    border-top: none; 
 }
 
-.portfolio-link {
-}
+
+
 
 .card-list-service {
    color: var(--navyblue);
@@ -626,3 +676,67 @@ width: calc((100% - 48px) / 3);
    letter-spacing: 0.02em;
 }
 
+/* ---------------------------modal--------------------- */
+
+.modal {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(46, 47, 66, 0.4);
+   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
+
+   .is-hidden {
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;      
+   }
+
+   .modal-window {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1);
+      width: 408px; 
+      min-height: 584px;
+      background: #fcfcfc;
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 4px; 
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   }
+
+   .modal-button {
+      position: absolute; 
+      top: 24px;
+      right: 24px;
+      width: 24px;
+      height: 24px; 
+      border-radius: 50%; 
+      display: flex; 
+      align-items: center; 
+      justify-content: center;
+      background-color: #e7e9fc; 
+      border: 1px solid rgba(0, 0, 0, 0.1); 
+      padding: 0; 
+      cursor: pointer;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+      }
+
+      .modal-button:hover {
+         background-color: #404bbf;
+         border: none; 
+         fill: #FFFFFF;
+      }
+
+      .modal-button:focus {
+         background-color: #404bbf;
+         border: none;  
+         fill: #FFFFFF;
+
+      }
+      
+.modal-button-icons {
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
