--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    height: 4px;
    background-color: #404bbf;
    border-radius: 2px; 
-   content: ;
+   content: '';
 }
 
 .header-menu-link {
@@ -383,7 +383,7 @@ padding: 32px 0;
 .team-socials-link {
    width: 100%;
    height: 100%;
-   background-color: #4D5AE5;
+   background-color: #404BBF;
    border-radius: 50%;
    display: flex;
    align-items: center;
@@ -544,7 +544,7 @@ background-color: #31d0aa;
 }
 
 .footer-list-link:focus {
-background-color: #31d0aa;;
+background-color: #31d0aa;
 }
 
 .footer-icons {
@@ -647,7 +647,7 @@ width: calc((100% - 48px) / 3);
    width: 100%;
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
+
 }
 
 
