--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,7 @@ padding: 32px 0;
 .team-socials-link {
    width: 100%;
    height: 100%;
-   background-color: #404BBF;
+   background-color: #4D5AE5;
    border-radius: 50%;
    display: flex;
    align-items: center;
@@ -569,7 +569,7 @@ background-color: #31d0aa;
 }
 
 .list-button-item {
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button {
