--- a/css/styles.css
+++ b/css/styles.css
@@ -124,18 +124,20 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 
 .header-menu-item {
    padding: 24px 0;
-   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.header-menu-item::after {
+.underline::after {
+   content: '';
    position: absolute;
-   left:0;
+   left: 0;
    bottom: -1px;
    height: 4px;
    background-color: #404bbf;
-   border-radius: 2px; 
-   content: '';
+   border-radius: 2px;
+   width: 100%;
+   display: block;    
 }
 
 .header-menu-link {
@@ -146,8 +148,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    letter-spacing: 0.02em;
    padding: 24px 0;
    position: relative; 
-   color: #404bbf;
-   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover {
@@ -179,7 +180,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    font-size: 16px;
    line-height: 1.5; 
    letter-spacing: 0.02em;   
-   transition:  250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* --------------------------main-------------------------- */
@@ -389,11 +390,11 @@ padding: 32px 0;
    align-items: center;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   }
+}
 
-   .team-socials-link:hover {
-      background-color: #404bbf; 
-   }
+.team-socials-link:hover {
+   background-color: #404bbf; 
+}
 
 .team-socials-link:focus {
    background-color: #404bbf; 
@@ -402,6 +403,8 @@ padding: 32px 0;
 .team-icons {
    fill: #f4f4fd;
 }
+
+/* ------------------------customers-------------------- */
 
 .customers {
    padding-top: 120px;
@@ -435,14 +438,9 @@ padding: 32px 0;
    justify-content: center;
    color:  #8e8f99;
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
-.customers-list-link:hover {
-   border-color: #404bbf;
-   color: #404bbf; 
-}
-
+.customers-list-link:hover,
 .customers-list-link:focus {
    border-color: #404bbf;
    color: #404bbf; 
@@ -539,10 +537,8 @@ padding: 32px 0;
    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-list-link:hover {
-background-color: #31d0aa;
-}
 
+.footer-list-link:hover,
 .footer-list-link:focus {
 background-color: #31d0aa;
 }
