--- a/css/styles.css
+++ b/css/styles.css
@@ -565,7 +565,6 @@ background-color: #31d0aa;
 }
 
 .list-button-item {
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button {
@@ -583,6 +582,8 @@ background-color: #31d0aa;
    background: var(--cloud);
    padding: 12px 24px;
    border-radius: 4px; 
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .filter-button:hover {
@@ -617,11 +618,15 @@ width: calc((100% - 48px) / 3);
 
 .portfolio-link:hover {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
-   transform: translateY(0%);
+
 }
 
 .portfolio-link:focus {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);  
+   
+}
+
+.portfolio-link:hover .card-text, .portfolio-link:focus .card-text {
    transform: translateY(0%);
 }
 
@@ -682,13 +687,13 @@ width: calc((100% - 48px) / 3);
    height: 100%;
    background-color: rgba(46, 47, 66, 0.4);
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   }
+}
 
-   .is-hidden {
-      opacity: 0;
-      visibility: hidden;
-      pointer-events: none;      
-   }
+.is-hidden {
+opacity: 0;
+visibility: hidden;
+pointer-events: none;      
+}
 
    .modal-window {
       position: absolute;
