--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 
 .header-menu-link {
-   color: var(--navyblue);
+   color: var(--ocean);
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
@@ -352,7 +352,7 @@ padding: 32px 0;
 }
 
 .team-list-name {
-   color: var(--navyblue);
+   color: var(--);
    text-align: center;
    font-size: 20px;
    font-weight: 500;
@@ -583,7 +583,6 @@ background-color: #31d0aa;
    padding: 12px 24px;
    border-radius: 4px; 
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .filter-button:hover {
@@ -725,18 +724,12 @@ pointer-events: none;
       transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
       }
 
-      .modal-button:hover {
-         background-color: #404bbf;
-         border: none; 
-         fill: #FFFFFF;
-      }
-
-      .modal-button:focus {
-         background-color: #404bbf;
-         border: none;  
-         fill: #FFFFFF;
-
-      }
+.modal-button:hover,      
+.modal-button:focus {
+background-color: #404bbf;
+border: none; 
+fill: #FFFFFF;
+}
       
 .modal-button-icons {
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
