--- a/css/styles.css
+++ b/css/styles.css
@@ -587,7 +587,7 @@ img {
    background: var(--cloud);
    padding: 12px 24px;
    border-radius: 4px;
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier (0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button:hover {
@@ -734,8 +734,14 @@ img {
 .modal-button:focus {
    background-color: #404bbf;
    border: none;
+}
+
+.modal-button:hover .modal-button-icons,
+.modal-button:hover .modal-button-icons {
    fill: #FFFFFF;
 }
+
+
 
 .modal-button-icons {
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
