--- a/css/styles.css
+++ b/css/styles.css
@@ -147,8 +147,12 @@ img {
    display: block;
 }
 
+.underline {
+   color: #404bbf;
+}
+
 .header-menu-link {
-   color: var(--ocean);
+   color: var(--navyblue);
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
@@ -197,12 +201,14 @@ img {
 .hero {
    background-color: var(--navyblue);
    padding: 188px 0;
-   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
-   або background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpg);
+   background: url(/images/images-main/img8.jpg), lightgray 0px -167.766px / 100% 139.922% no-repeat;
    max-width: 1440px;
+   max-height: 600px;
+   flex-shrink: 0;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
+   margin: 0 auto;
 }
 
 .hero-title {
@@ -375,6 +381,7 @@ img {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
+   margin-bottom: 8px;
 }
 
 .team-socials-list {
@@ -424,6 +431,7 @@ img {
    line-height: 1.11;
    color: #2e2f42;
    margin-bottom: 72px;
+   text-align: center;
 }
 
 .customers-list {
