--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ img {
 }
 
 .header-menu-link {
-   color: var(--navyblue);
+   /* color: var(--navyblue); */
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
