--- a/css/styles.css
+++ b/css/styles.css
@@ -202,8 +202,8 @@ img {
    background-color: var(--navyblue);
    padding: 188px 0;
    /* background: url(/images/images-main/img8.jpg), lightgray 0px -167.766px / 100% 139.922% no-repeat; */
-   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg);
-   або background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/img8.jpg) max-width: 1440px;
+   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/images-main/img8.jpg);
+   max-width: 1440px;
    max-height: 600px;
    flex-shrink: 0;
    background-repeat: no-repeat;
