--- a/css/styles.css
+++ b/css/styles.css
@@ -130,9 +130,8 @@ img {
 }
 
 .header-menu-item {
-   padding: 24px 0;
+   /* padding: 24px 0; */
    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .underline::after {
@@ -152,7 +151,7 @@ img {
 }
 
 .header-menu-link {
-   /* color: var(--navyblue); */
+   display: block;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
